# knowledge_graph_maker

./: README.md  pyproject.toml
knowledge_graph_maker/: __init__.py
knowledge_graph_maker/llm_clients/: groq_client.py  ollama_client.py
