[tool.poetry]
name = "knowledge-graph-maker"
version = "0.2.0"
description = "Create knowledge graph out of any text using a given ontology"
authors = ["Rahul Nayak <rahul.nyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pathlib = "^1.0.1"
uuid = "^1.30"
jupyterlab = "^4.0.8"
yachalk = "^0.1.5"
groq = "^0.6.0"
python-dotenv = "^1.0.1"
neo4j = "5.19.0"
neomodel = "^5.3.0"
logging = "^0.4.9.6"
openai = "^1.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
